--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -42,6 +42,7 @@
                 <h1><span class="hero-text">{{ jptitle }}</span></h1>
             </div>
             <article>
+                <h1>{{ title }}</h1>
                 {{ content | safe }}
             </article>
             {%- if type == 'leccion' -%}
