--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -26,8 +26,11 @@
     <meta name="twitter:image" content="#">
     <meta name="twitter:creator" content="@a_vistu">
     <!-- CSS -->
-    <script src="/assets/funcion/tk.js" type="application/javascript" async></script>
-    <link rel="stylesheet" href="/style.css" type="text/css">
+    <!--<script src="/assets/funcion/tk.js" type="application/javascript" async></script>-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=BIZ+UDMincho&family=Source+Serif+4:ital@0;1&display=swap" rel="stylesheet">
+     <link rel="stylesheet" href="/style.css" type="text/css">
     <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" href="/assets/apple-touch-icon.png">
