--- a/src/index.njk
+++ b/src/index.njk
@@ -1,10 +1,9 @@
 ---
-title: Inicio
+title: Bienvenida
 jptitle: 'ようこそ'
 layout: 'base.njk'
 ---
 
-<h1>Bienvenido</h1>
 <blockquote class="epi">Un hombre sin ningún encanto especial discute sobre toda suerte de temas al azar, como si lo
   supiera todo. <cite>Sei Shōnagon</cite></blockquote>
 <p>Esta web es administrada por un estudiante cualquiera de japonés. El propósito de este sitio es compilar información
