--- a/src/style.css
+++ b/src/style.css
@@ -23,7 +23,7 @@
     --magral: 40rem;
     --prosa: 0.6px;
     --cuerpo: 'Alegreya Sans', 'Noto Sans JP', Candara, "游ゴシック体", "Yu Gothic", "YuGothic", "ヒラギノ角ゴシック Pro", "Hiragino Kaku Gothic Pro", "メイリオ", "Meiryo", "Osaka", "ＭＳ Ｐゴシック", "MS PGothic", system-ui, sans-serif;
-    --titular: 'Seravek', 'Gill Sans', 'Gill Sans MT', 'Gill Sans Nova', Candara, "游ゴシック体", "Yu Gothic", "YuGothic", "ヒラギノ角ゴシック Pro", "Hiragino Kaku Gothic Pro", "メイリオ", "Meiryo", "Osaka", "ＭＳ Ｐゴシック", "MS PGothic", system-ui, sans-serif;
+    --titular: 'Piazzolla', Charter, Constantia, "游ゴシック体", "Yu Gothic", "YuGothic", "ヒラギノ角ゴシック Pro", "Hiragino Kaku Gothic Pro", "メイリオ", "Meiryo", "Osaka", "ＭＳ Ｐゴシック", "MS PGothic", system-ui, sans-serif;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -57,16 +57,12 @@ body {
     background-color: var(--bg);
     position: relative;
     max-width: 64em;
-    /* remove this for a full-width layout */
     margin: 0 auto;
-    /* centers the layout */
+    counter-reset: sidenote-counter;
 }
-
-/* ------- Sections ------- */
 
 section {
     padding: calc(6em + 5vw) 5vw 8vw 5vw;
-    /* ! Everything below is needed ! */
     display: block;
     position: absolute;
     top: 0;
@@ -112,9 +108,8 @@ header {
 }
 
 header h1 {
-    font-size: 1em;
+    font-size: 1rem;
     flex: 1;
-    /* pushes nav to the right */
     white-space: nowrap;
     padding: 0 5vw .5em 0;
 }
@@ -134,17 +129,26 @@ a:hover {
     border-bottom: 1px solid;
 }
 
-section h1 {
-    font-size: 1.3em;
-    margin: 0 0 1em 0;
-}
-
+h1,
 h2,
 h3,
 h4 {
-    font-size: 1em;
     font-weight: 600;
     margin: 1.6em 0 .6em 0;
+    font-family: var(--titular);
+}
+
+h1 {
+    font-size: 1.5rem;
+    margin: 0 0 1em 0;
+}
+
+h2 {
+    font-size: 1.25rem;
+}
+
+h3 {
+    font-size: 1rem;
 }
 
 p,
@@ -157,27 +161,39 @@ blockquote,
     margin-bottom: .6em;
 }
 
-ul {
+ul,
+ol {
+    padding-left: var(--interior);
     list-style-type: none;
+    list-style-position: outside;
 }
 
-ul li::marker {
-    content: "\2022   ";
+ol {
+    counter-reset: numeral;
 }
 
 li {
     margin-bottom: .2em;
+    position: relative;
 }
 
-ul,
-ol {
-    padding-left: var(--interior);
-    list-style-position: outside;
+article ol li::before {
+    font-family: 'CI', var(--cuerpo);
+    font-size: 0.9rem;
+    counter-increment: numeral;
+    content: counter(numeral);
+    position: absolute;
+    margin-left: calc(var(--interior) * -1);
+    top: 3px;
 }
 
-b,
-strong {
-    font-weight: 600;
+article ul li::before {
+    font-family: 'CI', var(--cuerpo);
+    font-size: 0.9rem;
+    content: '\2022';
+    position: absolute;
+    margin-left: calc(var(--interior) * -1);
+    top: 2px;
 }
 
 small {
@@ -203,7 +219,6 @@ abbr[title]:hover {
 
 blockquote {
     padding-left: var(--interior);
-    opacity: .8;
     margin-bottom: 1rem;
     position: relative;
 }
@@ -212,8 +227,8 @@ blockquote:before {
     content: "";
     position: absolute;
     left: 0;
-    top: .3em;
-    bottom: .3em;
+    top: .3rem;
+    bottom: .3rem;
     background: currentColor;
     width: 1px;
     opacity: .2;
@@ -229,25 +244,12 @@ blockquote:before {
 }
 
 .epi cite {
-    font-style: normal;
-    font-variant: small-caps;
-    -moz-font-feature-settings: 'smcp';
-    -webkit-font-feature-settings: 'smcp';
-    -ms-font-feature-settings: 'smcp';
-    font-feature-settings: 'smcp';
-    letter-spacing: 0.04em;
-    text-transform: lowercase;
+    font-family: 'Alegreya Sans SC', var(--cuerpo);
     display: block;
 }
 
 .vers {
-    font-variant: small-caps;
-    -moz-font-feature-settings: 'smcp';
-    -webkit-font-feature-settings: 'smcp';
-    -ms-font-feature-settings: 'smcp';
-    font-feature-settings: 'smcp';
-    letter-spacing: 0.03em;
-    text-transform: lowercase;
+    font-family: 'Alegreya Sans SC', var(--cuerpo);
 }
 
 img,
@@ -542,27 +544,6 @@ a[href$=".png"]:before {
 
 article+article {
     margin-top: 4.5em;
-}
-
-article h1,
-h2,
-h3,
-h4 {
-    font-family: var(--titular);
-}
-
-article h2 {
-    font-weight: 600;
-    margin: 2rem 0 0rem 0;
-}
-
-article h3 {
-    font-weight: 400;
-    text-transform: lowercase;
-    font-variant-caps: small-caps;
-    letter-spacing: 0.04em;
-    margin: 1rem 0 0;
-    line-height: 1;
 }
 
 article time {
