--- a/src/style.css
+++ b/src/style.css
@@ -23,7 +23,7 @@
     --magral: 40rem;
     --prosa: 0.6px;
     --cuerpo: 'Alegreya Sans', 'Noto Sans JP', Candara, "游ゴシック体", "Yu Gothic", "YuGothic", "ヒラギノ角ゴシック Pro", "Hiragino Kaku Gothic Pro", "メイリオ", "Meiryo", "Osaka", "ＭＳ Ｐゴシック", "MS PGothic", system-ui, sans-serif;
-    --titular: 'Piazzolla', Charter, Constantia, "游ゴシック体", "Yu Gothic", "YuGothic", "ヒラギノ角ゴシック Pro", "Hiragino Kaku Gothic Pro", "メイリオ", "Meiryo", "Osaka", "ＭＳ Ｐゴシック", "MS PGothic", system-ui, sans-serif;
+    --titular: 'Piazzolla', Charter, Constantia, "游明朝", YuMincho, Yu Mincho, "Hiragino Mincho ProN W3", "ヒラギノ明朝 ProN W3", "Hiragino Mincho ProN", "HG明朝E", "ＭＳ Ｐ明朝", "ＭＳ 明朝", "Times New Roman", ui-serif, serif;
 }
 
 @media (prefers-color-scheme: dark) {
